# Radiomics_on_MRI_for_predicting_colorectal_cancer_treatment_response

./: MR_2D_extraction.yaml  Params.yaml  Pat12T2M45.tiff  Pat12T2M45_masked.tiff  README.md  evaluation.py  feature_extraction.py  feature_selection.py  figures.py  image_preprocessing.py  image_processing.py  main.py  ml_prediction.py  pyproject.toml
extra_scripts/: copy_data.py  example_main.py  figures.py
